--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image" href="/images/emblems/logo_color_circle.webp" />
+    <link rel="icon" type="image/webp" href="/images/emblems/logo_color_circle.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Ashen Tempestariis</title>
   </head>
